--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,6 @@ html {
 
 }
 
-/*16px*/
 :root {
   /* colors  primary*/
   --primary-100: #f7f0f1;
@@ -90,11 +89,32 @@ html {
   --shadow-4: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
     0 10px 10px -5px rgba(0, 0, 0, 0.04);
   --box-shadow: 0px 0px 3px rgba(128, 128, 128, 0.769), .5px .5px 3px 4px rgba(255, 255, 255, 0.701), 0px 0px 6px rgba(255, 255, 167, 0.674);
-
+  --boxShadowCard: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  --textShadowTitle: 0 1.7px 0 rgba(0, 0, 0, 0.4);
+  --textShadowTitle2: 0 1px 0 rgba(0, 0, 0, 0.2), 0 1.1px 0 rgba(0, 0, 0, 0.2);
+  --boxShadowImage: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  --boxShadowImage2: 0 3px 5px -1px rgba(54, 54, 54, 0.1),
+    0 2px 4px -1px rgba(54, 54, 54, 0.06);
+  --boxShadowImage3: 0 4px 6px -1px rgba(156, 156, 156, 0.1),
+    0 2px 4px -1px rgba(108, 108, 108, 0.06);
+  /* --boxShadow: 0 0 3px 5px black, 0.5px 0.5px 4px 6px grey; */
+  --boxShadowHover: 0 0 3px 5px grey, 0.5px 0.5px 4px 6px black;
+  --textShadow: 2px 2px 10px rgb(255, 255, 255),
+    0px 0px 7px rgb(171, 119, 255, 0.6);
+  --textShadow2: 2px 2px 10px rgb(255, 255, 255),
+    0px 0px 7px var(--secondary-600);
+  --shadow-logo: 2px -17px 5px #666666;
+  /* end of box-shadow */
+  /* filter */
+  --filter-black: drop-shadow(0.8px 0.8px 1px var(--blackMain)) invert(5%);
+  --filter-white: drop-shadow(0.8px 0.8px 1px var(--whitekMain)) invert(5%);
+  --filter-with-light-redding: drop-shadow(0 0 0.05em var(--secondary-200));
+  --filter-with-redding: drop-shadow(0 0 0.05em var(--secondary-500));
+  /* end of filter */
   --text-shadow: text-shadow: 2px 2px 10px rgb(255, 255, 255),
     0px 0px 7px rgb(171, 119, 255);
   --shadow-logo: 2px -17px 5px #666666;
-  /* styling scroll project */
   --ff-primary: "Roboto", sans-serif;
   --ff-secondary: "Open Sans", sans-serif;
   --transition: all 0.3s linear;
@@ -104,9 +124,7 @@ html {
   --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
   --max-width: 1170px;
   --fixed-width: 620px;
-  /* transform */
   --transform-text: scale(.98, 1.01);
-  /* section two */
   /* colors */
   --primaryColor: #A60000;
   --secondaryColor: #e30101;
@@ -348,13 +366,82 @@ img:not(.logo) {
 .btn-white {
   color: var(--white);
   border-color: var(--white);
+  text-shadow: var(--textShadow);
   border-radius: 0;
   padding: 0.5rem 1rem;
+  box-shadow: var(--shadow-1);
+  transition: all 0.3s linear;
 }
 
 .btn-white:hover {
   background: var(--secondary-500);
   color: var(--white);
+}
+
+/* text */
+.text_dark {
+  color: var(--blackMain);
+  padding: 0.8rem;
+  text-overflow: ellipsis;
+  text-indent: 2rem;
+  filter: var(--filter-with-light-redding);
+  text-align: justify;
+  word-wrap: break-word;
+  border-radius: 10%;
+  font-size: 105%;
+  /* background-color: rgba(255, 255, 255, 0.05); */
+  text-shadow: var(--textShadowTitle2);
+  filter: var(--filter-white);
+  backdrop-filter: blur(2px);
+}
+
+.text_light {
+  color: var(--whiteMain);
+  padding: 0.8rem;
+  text-overflow: ellipsis;
+  text-indent: 2rem;
+  text-align: justify;
+  word-wrap: break-word;
+  /* background-color: rgb(0, 0, 0, 0.5); */
+  filter: drop-shadow(0.8px 0.8px 1px var(--blackMain)) invert(5%);
+  text-shadow: var(--textShadowTitle2);
+}
+
+/* testing */
+.overlay_dark {
+  width: inherit;
+  height: inherit;
+  position: relative;
+  z-index: inherit;
+}
+
+.overlay_dark::after {
+  content: "";
+  width: inherit;
+  height: inherit;
+  position: relative;
+  position: absolute;
+  z-index: 5;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.45);
+  margin: 0 auto;
+}
+
+/* end of testing */
+/* end of text */
+.h1 {
+  filter: drop-shadow(0.8px 0.8px 1px var(--whiteMain)) invert(5%);
+  text-shadow: var(--textShadowTitle);
+}
+
+.h2 {
+  padding-top: 4rem;
+  color: var(--whiteSilver);
+  text-shadow: var(--textShadowTitle);
+
 }
 
 /* --------------------------------------- */
@@ -476,12 +563,6 @@ img:not(.logo) {
   visibility: hidden;
 }
 
-/* main {
-  min-height: 100vh;
-  display: grid;
-  place-items: center;
-} */
-
 /* loading */
 @keyframes spinner {
   to {
@@ -502,7 +583,6 @@ img:not(.logo) {
   margin: 0 auto;
 }
 
-/* --------------------------------- */
 /* ------END OF GLOBALS------- */
 /*
 =============== 
@@ -510,10 +590,22 @@ Scroll
 ===============
 */
 /* navbar */
+/* nav {
+  background: rgb(248, 250, 252);
+  padding: 1rem 1.5rem 0;
+} */
 nav {
   background: rgb(248, 250, 252);
-  ;
-  padding: 1rem 1.5rem;
+  padding: 1rem 1.5rem 0;
+  text-shadow: var(--shadow-1);
+  z-index: 25;
+  position: fixed;
+  left: 0;
+  right: 0;
+  width: 100vw;
+  top: 0 !important;
+  /*      background: rgb(248, 250, 252);
+  padding: 1rem 1.5rem 0; */
 }
 
 /* fixed nav */
@@ -523,13 +615,13 @@ nav {
   left: 0;
   width: 100%;
   background: var(--white);
-
   box-shadow: var(--light-shadow);
-  z-index: 20;
+  z-index: 20 !important;
 }
 
 .fixed-nav .links a {
   color: var(--primary-700);
+  text-shadow: var(--textShadow);
 }
 
 .fixed-nav .links a:hover {
@@ -537,9 +629,6 @@ nav {
   transform: var(--transform-text)
 }
 
-/* .fixed-nav .links-container {
-  height: auto !important;
-} */
 .nav-header {
   display: flex;
   align-items: center;
@@ -554,6 +643,7 @@ nav {
   border-color: transparent;
   transition: var(--transition);
   cursor: pointer;
+  z-index: 35;
 }
 
 .nav-toggle:hover {
@@ -600,6 +690,7 @@ nav {
   font-weight: bold;
   padding: 0.85rem 0;
   color: var(--primary-700);
+  cursor: pointer;
 
 
 }
@@ -632,7 +723,6 @@ nav {
 
   .links-container {
     height: auto !important;
-    /* background: transparent; */
   }
 
   .links {
@@ -662,8 +752,7 @@ nav {
 /* hero */
 header {
   min-height: 100vh;
-  background: linear-gradient(rgba(63, 208, 212, 0.5), rgba(0, 0, 0, 0.7)),
-    url(../images/cows-on-meadow-backgrownd.jpg) center/cover no-repeat;
+  background: url(../images/cows-on-meadow-backgrownd.jpg) center/cover no-repeat;
 }
 
 header#home.header_privacy {
@@ -681,6 +770,10 @@ header#home.header_privacy {
 
 .marginB {
   margin-bottom: 2rem;
+}
+
+.container {
+  z-index: 7;
 }
 
 .container h1 {
@@ -932,7 +1025,6 @@ About
   cursor: pointer;
   transition: var(--transition);
   letter-spacing: var(--spacing);
-  /* border-right: .01rem solid var(--white); */
   color: var(--black);
   background: var(--grey-300);
 }
@@ -952,7 +1044,6 @@ About
   cursor: pointer;
   transition: var(--transition);
   letter-spacing: var(--spacing);
-  /* border-right: .01rem solid var(--white); */
   color: var(--black);
   background: var(--grey-300);
 }
@@ -1015,9 +1106,6 @@ About
   margin-top: 9rem;
 }
 
-/* .marginTopMiddle{
-  margin-top: 1rem;
-} */
 /*
 =============== 
 Menu
@@ -1392,7 +1480,6 @@ Reviews
 
 /* end of menu image styling */
 /* privacy policy */
-
 .main_article {
   background: var(--tirtiaryColor) url("../images/bg-drop-.jpg") center/cover no-repeat fixed;
   margin: 0 auto;
@@ -1471,6 +1558,7 @@ main.main_bg_map {
 }
 
 .iframe_map {
+  margin-top: 6rem;
   background-color: var(--blackLighter);
   width: 100vw;
 }
@@ -1592,14 +1680,17 @@ main.main_bg_map {
   margin: 0 auto;
   text-align: center;
   padding: 0 0 2rem;
-  width: 98vw;
+  border-radius: 10px;
+  box-shadow: var(--boxShadowImage);
+  object-fit: cover;
+  max-width: 100%;
   min-height: 50vh;
 }
 
 .imgMain {
-  min-height: 50vh;
-  max-width: 100%;
-  object-fit: cover;
+  min-height: 26vh;
+  width: 100%;
+  object-fit: fill;
   margin: 0 auto;
   display: block;
 }
@@ -2038,7 +2129,6 @@ a.footer_address {
   animation: bounce 2s ease-in-out infinite;
   visibility: hidden;
   z-index: -100;
-
 }
 
 .top-link:hover {
@@ -2055,6 +2145,7 @@ a.footer_address {
 
 .fa-phone {
   color: var(--white);
+  cursor: pointer;
 }
 
 .whatsapp-link {
@@ -2074,6 +2165,7 @@ a.footer_address {
   z-index: 100;
   border: 2px solid var(--white);
   transition: all 0.3s linear;
+  cursor: pointer;
 }
 
 .whatsapp-link:hover {
@@ -2091,6 +2183,7 @@ a.footer_address {
 i.fas.fa-arrow-up::before {
   text-align: center;
   padding: 0.5rem;
+  cursor: pointer;
 }
 
 i.fas.fa-phone.fa-flip-horizontal::before {
@@ -2124,9 +2217,6 @@ i.fas.fa-phone.fa-flip-horizontal::before {
   }
 }
 
-/* end of arrow for scroll */
-/* end of footer */
-/* flash in effect */
 .flashIn {
   animation: flashIn 1s forwards 1 cubic-bezier(0.47, 0, 0.745, 0.715) alternate;
 }
