--- a/css/main.css
+++ b/css/main.css
@@ -432,7 +432,7 @@ img:not(.logo) {
 
 /* intersention observer */
 .fade-up {
-  opacity: 0;
+  /* opacity: 0; */
   position: relative;
   transform: translateY(5rem);
   transition: transform 1s cubic-bezier(0.64, 0.04, 0.26, 0.87),
