"Changed the info about the delivery."

--- a/css/main.css
+++ b/css/main.css
@@ -1663,7 +1663,7 @@ main.main_bg_map {
 }
 
 .hr_thumb_on_map1::before {
-  content: '🚘Доставка по г. Покров, пос. Вольгинский, г. Петушки бесплатно!';
+  content: '🚘Есть доставка по г. Покров и пос. Вольгинский!';
   text-align: center;
   text-transform: uppercase;
   color: var(--whiteMain);
