--- a/css/main.css
+++ b/css/main.css
@@ -212,7 +212,7 @@ body {
   line-height: 1.75;
   font-size: 0.875rem;
   font-weight: 400;
-  overflow-y: hidden;
+  /* overflow-y: hidden; */
 }
 
 ul {
